browser/devtools/styleeditor/styleeditor.css
.
stylesheet
-
error
-
message
{
display
:
none
;
}
li
.
error
>
.
stylesheet
-
info
>
.
stylesheet
-
more
>
.
stylesheet
-
error
-
message
{
display
:
block
;
}
.
splitview
-
nav
>
li
.
stylesheet
-
info
.
stylesheet
-
more
{
display
:
-
moz
-
box
;
}
.
splitview
-
nav
>
li
{
-
moz
-
box
-
orient
:
horizontal
;
}
.
splitview
-
nav
>
li
>
hgroup
{
display
:
-
moz
-
box
;
-
moz
-
box
-
orient
:
vertical
;
-
moz
-
box
-
flex
:
1
;
}
.
stylesheet
-
info
>
h1
{
-
moz
-
box
-
flex
:
1
;
}
.
stylesheet
-
name
{
outline
:
none
;
}
.
stylesheet
-
name
>
label
{
cursor
:
pointer
;
}
.
splitview
-
nav
>
li
>
hgroup
.
stylesheet
-
info
{
-
moz
-
box
-
pack
:
center
;
}
.
stylesheet
-
enabled
{
display
:
-
moz
-
box
;
}
.
stylesheet
-
saveButton
{
display
:
none
;
}
.
stylesheet
-
rule
-
count
li
.
splitview
-
active
>
hgroup
>
.
stylesheet
-
more
>
h3
>
.
stylesheet
-
saveButton
li
:
hover
>
hgroup
>
.
stylesheet
-
more
>
h3
>
.
stylesheet
-
saveButton
{
display
:
-
moz
-
box
;
}
.
stylesheet
-
more
>
spacer
{
-
moz
-
box
-
flex
:
1
;
}
media
(
max
-
aspect
-
ratio
:
5
/
3
)
{
li
.
splitview
-
active
>
hgroup
>
.
stylesheet
-
more
>
.
stylesheet
-
rule
-
count
li
:
hover
>
hgroup
>
.
stylesheet
-
more
>
.
stylesheet
-
rule
-
count
{
display
:
none
;
}
.
stylesheet
-
more
{
-
moz
-
box
-
flex
:
1
;
-
moz
-
box
-
pack
:
end
;
}
.
splitview
-
nav
>
li
>
hgroup
.
stylesheet
-
info
{
-
moz
-
box
-
orient
:
horizontal
;
-
moz
-
box
-
flex
:
1
;
}
.
stylesheet
-
more
>
spacer
{
-
moz
-
box
-
flex
:
0
;
}
}

